Fixed scrollbar and placeholder sized

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ table {
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 2px;
 }
 ::-webkit-scrollbar-track {
   background: #f1f1f121;
@@ -136,6 +136,7 @@ input {
 ::placeholder {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-size: 24px;
+  font-weight: lighter;
   color: rgba(255, 255, 255, 0.349);
 }
 
